--- a/src/nuclio/common/less/buttons.less
+++ b/src/nuclio/common/less/buttons.less
@@ -107,6 +107,7 @@
     border: none;
     background-color: @dark-orange;
     outline: none;
+    margin-left: 15px;
 
     &:hover {
         background-color: @orange;
