--- a/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.less
+++ b/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.less
@@ -10,6 +10,29 @@
             justify-content: flex-end;
             margin-bottom: 2px;
 
+            .projects-drop-down {
+                width: 40%;
+                margin-right: 48px;
+
+                .input-label {
+                    font-size: 14px;
+                    font-weight: 600;
+                    color: @dusk-three;
+                }
+
+                igz-default-dropdown {
+                    .default-dropdown {
+                        background-color: @white;
+
+                        .default-dropdown-field {
+                            &:focus {
+                                background-color: inherit;
+                            }
+                        }
+                    }
+                }
+            }
+
             .function-name {
                 width: 100%;
 
