[Services] Create new Services screen

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -573,6 +573,10 @@
     .generateIconClass(983);
 }
 
+.igz-icon-services {
+    .generateIconClass(984);
+}
+
 .igz-icon-priority-realtime, .igz-icon-priority-high, .igz-icon-priority-standard, .igz-icon-priority-low {
     display: inline-block;
     font-size: 17px;
