--- a/src/nuclio/projects/project/functions/version/version-code/version-code.less
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.less
@@ -39,6 +39,7 @@
             display: flex;
             flex-direction: column;
             flex: 1;
+            position: relative;
 
             .code-editor-drop-zone {
                 position: absolute;
