[Home] Implement new Home screen

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -577,6 +577,10 @@
     .generateIconClass(984);
 }
 
+.igz-icon-external-link {
+    .generateIconClass(985);
+}
+
 .igz-icon-priority-realtime, .igz-icon-priority-high, .igz-icon-priority-standard, .igz-icon-priority-low {
     display: inline-block;
     font-size: 17px;
